--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -20,7 +20,7 @@
 			<androidx.appcompat.widget.SearchView
 				android:id="@+id/searchView"
 				android:layout_width="0dp"
-				android:layout_height="wrap_content"
+				android:layout_height="match_parent"
 				android:layout_marginStart="19dp"
 				android:layout_marginEnd="32dp"
 				android:layout_weight="1"
@@ -37,7 +37,6 @@
 				android:layout_gravity="center"
 				android:layout_marginEnd="19dp"
 				android:src="@drawable/ic_filled" />
-
 
 		</LinearLayout>
 
